15108
Suppose we have a script that begins with #! !#
```scala
#! scala
!#

val x = "line 4"
val y = "line 5"
val z "line 6"
```

With 2.7.7 the error messages are reasonable:-
```scala
(fragment of A.scala):5: error: '=' expected but string literal found.
val z "line 6"
       ^
```

With 2.8.0.r21134-b20100311102012 the reported line number is different and an irrelevant line of code is displayed:-
```scala
discarding <script preamble>
(fragment of A.scala):3: error: '=' expected but string literal found.
val x = "line 4"
                ^
```
